# morsel-db

./: .gitignore  CMakeLists.txt  Dockerfile  app.cpp  app_join.cpp  app_select.cpp  compile.sh  compile_release.sh  gen_table.sh  inTable_B.csv  join_test.sh  notes.txt  numa_out800000.csv  out.csv  out4000.csv  out40000.csv  out800000.csv  outputlog_100000recs.csv  outputlog_join.csv  outputlog_select.csv  outputlog_select_1.csv  outputlog_select_2.csv  random_table_gen.sh  run_test.sh  select_test.sh  select_test_debug.sh  t3.csv  test.txt  testTable_A.txt  testTable_B.txt  test_random_table_gen.sh  valgrind-out.txt  valid_queries.txt
Tables/: Table_10.csv  Table_11.csv  Table_12.csv  Table_13.csv  Table_14.csv  Table_15.csv  Table_16.csv  Table_17.csv  Table_18.csv  Table_19.csv  Table_3.csv  Table_4.csv  Table_5.csv  Table_6.csv  Table_7.csv  Table_8.csv  Table_9.csv
build-release/: .ninja_deps  .ninja_log  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  tablegen_compile_commands.yml
build-release/include/: CTestTestfile.cmake
build-release/src/: CTestTestfile.cmake  dbapp
build-release/tests/: CTestTestfile.cmake  morsel_test
doc/html/: annotated.html  arguments_8h_source.html  attribute_8h_source.html  classDispatcher-members.html  classDispatcher.html  classMorsel-members.html  classMorsel.html  classMorselContainer-members.html  classMorselContainer.html  classOperator-members.html  classOperator.html  classQEP-members.html  classQEP.html  classReadTupleStream-members.html  classReadTupleStream.html  classReadTupleStream__coll__graph.map  classReadTupleStream__coll__graph.md5  classReadTupleStream__inherit__graph.map  classReadTupleStream__inherit__graph.md5  classRelationCatalog-members.html  classRelationCatalog.html  classRelationCatalogEntry-members.html  classRelationCatalogEntry.html  classTuple-members.html  classTuple.html  classTupleStream-members.html  classes.html  (+69 more)
in/: gen_test_table.py  sqlite.py  test_table4000.csv  test_table40000.csv  test_table_2.csv
include/: attribute.h  b_plus_tree.h  constants.h  dispatcher.h  init.h  lib.h  loop_functions.h  morsel.h  operators.h  parser.h  relcat.h  static.h  test.h  threads.h  tuple.h
src/: CMakeLists.txt  Doxyfile  app.cpp  attribute.cpp  b_plus_tree.cpp  dispatcher.cpp  init.cpp  lib.cpp  loop_functions.cpp  morsel.cpp  operators.cpp  parser.cpp  relcat.cpp  static.cpp  test.cpp  threads.cpp  tuple.cpp
src/DB/: CMakeLists.txt  DBDialect.cpp  DBOps.cpp
tests/: CMakeLists.txt  morsel_test.cpp
(+57 files in other folders)
